@@ -48,3 +48,7 @@ He accepts purchase orders.  <br><br>
 <li>The TMDA mailing lists are available as newsgroups courtesy of
 the <a href="http://gmane.org/" TARGET="Resource Window">Gmane</a>
 mail <--> news gateway.<br><br>
+
+<li>The TMDA mailing lists are archived at 
+<a href="http://marc.theaimsgroup.com/" TARGET="Resource Window">AIMS</a>.
+<br><br>
