@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Jul 13 14:35:42 2002 -->
+<!-- Mon Jul 15 13:09:24 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -182,6 +182,10 @@ He accepts purchase orders.  <br><br>
 <li>The TMDA mailing lists are available as newsgroups courtesy of
 the <a href="http://gmane.org/" TARGET="Resource Window">Gmane</a>
 mail <--> news gateway.<br><br>
+
+<li>The TMDA mailing lists are archived at 
+<a href="http://marc.theaimsgroup.com/" TARGET="Resource Window">AIMS</a>.
+<br><br>
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
