@@ -1,3 +1,7 @@
+2002-07-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* resources.ht: Add AIMS.
+
 2002-07-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Mention tmda-ofmipd.
